projects/laji/src/app/+theme/kerttu/kerttu-letter-annotation/letter-annotation/letter-annotation.component.scss
@import 'projects/laji-ui/src/lib/vars';

.lu-section {
  margin-top: 5px;
}

#letterInfo {
  overflow: auto;

  div {
    display: inline-block;
  }

  .letter-info-text {
    margin: 0.75em 0;
  }

  .letter-info-btn {
    margin-left: 0.5em;
  }
}

#letterAnnotationContainer {
  text-align: center;

  #letterAnnotationQuestionContainer {
    margin-bottom: 15px;

    #letterAnnotationQuestion {
      margin-top: 10px;
    }

    #letterAnnotationButtons lu-button {
      margin-left: 15px;
      margin-right: 15px;
    }
  }

  #letterAnnotationControls {
    text-align: left;

    > div {
      display: inline-block;
      vertical-align: top;
      margin-right: 8px;

      bswitch {
        display: block;
      }
    }
  }
}

h3, h4 {
  max-width: 100%;
}

:host ::ng-deep {
  lu-button button, button.lu-btn {
    transition: none;
  }

  #letterAnnotationQuestionContainer lu-button button {
    min-width: 100px;
    white-space: nowrap;
  }

  .label-info {
    vertical-align: middle;
  }
}

.gray {
  color: $neutral-6;
}

